tests/snapshots/conformance__n_structure_open_object.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
{
stdout --- 
<empty>
stderr --- 
error: expected key or closed curly brace, found no significant characters
 --> stdin:1:1
  |
1 | {
  | ^
  | |
  | expected due to `{`
  |
help: insert the missing curly brace
  |
1 | {}
  |  +
